--- a/index.html
+++ b/index.html
@@ -9758,7 +9758,7 @@ async function handleFile(file) {
             resultDetails.innerHTML = detailsHTML;
 
             // Fechar modal após 5 segundos (tempo maior para ler as estatísticas)
-            setTimeout(() => {
+            setTimeout(async () => {
                 closeUploadModal();
 
                 // Recarregar dados
@@ -9766,6 +9766,11 @@ async function handleFile(file) {
 
                 // Mudar botão para modo "Limpar planilha"
                 setButtonToClearMode();
+
+                // 🔥 CARREGAR MARCADORES AUTOMATICAMENTE
+                console.log('🔄 Carregando marcadores da nova planilha...');
+                await activateRouteMode();
+                console.log('✅ Marcadores carregados automaticamente!');
 
                 showToast(
                     'Planilha atualizada!',
